Added credit for @AlanYe-Dev for Chinese translations

--- a/HedgeModManager/UI/AboutWindow.xaml
+++ b/HedgeModManager/UI/AboutWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:HedgeModManager"
         mc:Ignorable="d"
-        Title="{StaticResource AboutWindowUITitle}" Height="542" Width="720"
+        Title="{StaticResource AboutWindowUITitle}" Height="570" Width="720"
         WindowStartupLocation="CenterScreen" ResizeMode="NoResize" Style="{StaticResource HedgeWindow}">
     <Grid>
         <Grid.RowDefinitions>
@@ -63,6 +63,7 @@
                 <StackPanel Grid.Column="0">
                     <Label Content="PTKickass"/>
                     <Label Content="JoeyLaw"/>
+                    <Label Content="Wr (AlanYe-Dev)"/>
                     <Label Content="LJSTAR"/>
                     <Label Content="Nanoposan69"/>
                     <Label Content="ricky-daniel13"/>
@@ -76,6 +77,7 @@
                 </StackPanel>
                 <StackPanel Grid.Column="1">
                     <Label Content="Portuguese translations"/>
+                    <Label Content="Chinese translations"/>
                     <Label Content="Chinese translations"/>
                     <Label Content="French translation"/>
                     <Label Content="Russian translation"/>
