--- a/HedgeModManager/Languages/ru-RU.xaml
+++ b/HedgeModManager/Languages/ru-RU.xaml
@@ -69,6 +69,9 @@
     <system:String x:Key="CodesUIInfo"    >Нажмите два раза по этому коду для большей информации.</system:String>
     <system:String x:Key="CodesUIInfoHint">Наведите курсор на код для большей информации.</system:String>
     <system:String x:Key="CodesUINoInfo"  >Нет информации.</system:String>
+    <system:String x:Key="CodesUIExpand"  >Раскрыть всё</system:String>
+    <system:String x:Key="CodesUICollapse">Закрыть всё</system:String>
+    <system:String x:Key="CodesUINullCategory">Без категории</system:String>
     <system:String xml:space="preserve" x:Key="CodesUIVersionIncompatible">Установленные коды несовместимы с загрузчиком кодов.&#x0a;Пожалуйста, обновите коды, а также загрузчик кодов.&#x0a;ВНИМАНИЕ: Это приведет к удалению всех пользовательских кодов.</system:String>
     <system:String xml:space="preserve" x:Key="CodesUIFetching">Получение кодов...</system:String>
 
@@ -93,6 +96,7 @@
     <system:String x:Key="SettingsUICheckCLUpdate"  >Проверять коды на наличие обновлений</system:String>
     <system:String x:Key="SettingsUICheckModUpdates">Проверять моды на наличие обновлений</system:String>
     <system:String x:Key="SettingsUIKeepHMMOpen"    >Оставить Hedge Mod Manager открытым после запуска игры</system:String>
+    <system:String x:Key="SettingsUICodesUseTreeView">Изменить вид списка кодов на древовидный</system:String>
     <system:String x:Key="SettingsUICheckHMMUpdate" >Проверить наличие обновлений</system:String>
     <system:String x:Key="SettingsUIAboutHMM"       >О программе Hedge Mod Manager</system:String>
     <system:String x:Key="SettingsUILanguage"       >Язык:</system:String>
