Update Russian translation credits

--- a/HedgeModManager/UI/AboutWindow.xaml
+++ b/HedgeModManager/UI/AboutWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:HedgeModManager"
         mc:Ignorable="d"
-        Title="{StaticResource AboutWindowUITitle}" Height="570" Width="720"
+        Title="{StaticResource AboutWindowUITitle}" Height="596" Width="720"
         WindowStartupLocation="CenterScreen" ResizeMode="NoResize" Style="{StaticResource HedgeWindow}">
     <Grid>
         <Grid.RowDefinitions>
@@ -66,6 +66,7 @@
                     <Label Content="Wr (AlanYe-Dev)"/>
                     <Label Content="LJSTAR"/>
                     <Label Content="Nanoposan69"/>
+                    <Label Content="TheExentist151"/>
                     <Label Content="ricky-daniel13"/>
                     <Label Content="Proa"/>
                     <Label Content="Mario Tainaka"/>
@@ -80,6 +81,7 @@
                     <Label Content="Chinese (Traditional) translation"/>
                     <Label Content="Chinese (Simplified) translation"/>
                     <Label Content="French translation"/>
+                    <Label Content="Russian translation and reviewing"/>
                     <Label Content="Russian translation"/>
                     <Label Content="Spanish translation"/>
                     <Label Content="Spanish translation and reviewing"/>
