--- a/HedgeModManager/Languages/zh-CN.xaml
+++ b/HedgeModManager/Languages/zh-CN.xaml
@@ -33,7 +33,7 @@
     <system:String xml:space="preserve" x:Key="MainUIMLUninstallFail">无法卸载 Mod 加载程序。&#x0a;请确保当前没有游戏正在运行。</system:String>
 
     <!-- Mods UI Strings -->
-    <system:String x:Key="ModsUIName"           >名称</system:String>
+    <system:String x:Key="ModsUIName"           >Mod</system:String>
     <system:String x:Key="ModsUIVersion"        >版本</system:String>
     <system:String x:Key="ModsUIAuthor"         >作者</system:String>
     <system:String x:Key="ModsUIFeatures"       >功能</system:String>
@@ -62,7 +62,11 @@
 
     <!-- Codes UI Strings -->
     <system:String x:Key="CodesUIName"    >名称</system:String>
-    <system:String x:Key="CodesUICategory">Category</system:String>
+    <system:String x:Key="CodesUICategory">分类</system:String>
+    <system:String x:Key="CodesUIExpand"  >展开</system:String>
+    <system:String x:Key="CodesUICollapse">折叠</system:String>
+    <system:String x:Key="CodesUINullCategory">未分类</system:String>
+    <system:String x:Key="SettingsUICodesUseTreeView">使用树视图展示代码列表</system:String>
     <system:String x:Key="CodesUIDownload">下载社区代码</system:String>
     <system:String x:Key="CodesUIUpdate"  >更新社区代码</system:String>
     <system:String x:Key="CodesUISearch"  >搜索: </system:String>
@@ -124,7 +128,7 @@
     <!-- AboutWindow UI Strings -->
     <system:String x:Key="AboutWindowUITitle"      >关于 Hedge Mod Manager</system:String>
     <system:String x:Key="AboutWindowUILine1"      >设计 Hedge Mod Manager 程序的目的是帮助人们能够更方便地加载 Mod。</system:String>
-    <system:String x:Key="AboutWindowUILine2"      >需要合法拥有的游戏版本来支持。</system:String>
+    <system:String x:Key="AboutWindowUILine2"      >请使用您合法持有的正版游戏</system:String>
     <system:String x:Key="AboutWindowUICredits"    >参与人员</system:String>
     <system:String x:Key="AboutWindowUITranslators">翻译人员</system:String>
 
