--- a/HedgeModManager/Languages/zh-CN.xaml
+++ b/HedgeModManager/Languages/zh-CN.xaml
@@ -33,7 +33,7 @@
     <system:String xml:space="preserve" x:Key="MainUIMLUninstallFail">无法卸载 Mod 加载程序。&#x0a;请确保当前没有游戏正在运行。</system:String>
 
     <!-- Mods UI Strings -->
-    <system:String x:Key="ModsUIName"           >名称</system:String>
+    <system:String x:Key="ModsUIName"           >Mod</system:String>
     <system:String x:Key="ModsUIVersion"        >版本</system:String>
     <system:String x:Key="ModsUIAuthor"         >作者</system:String>
     <system:String x:Key="ModsUIFeatures"       >功能</system:String>
@@ -56,33 +56,41 @@
     <system:String x:Key="ModsUIFeatureCode"         >这个 Mod 包含自定义代码。</system:String>
     <system:String x:Key="ModsUIFeatureCodeDisable"  >这个 Mod 不包含自定义代码。</system:String>
     <system:String x:Key="ModsUIModDragDrop"    >拖放项目以更改 Mod 的加载顺序。</system:String>
-    <system:String x:Key="ModsUISearch"         >搜索：</system:String>
+    <system:String x:Key="ModsUISearch"         >搜索: </system:String>
     <system:String xml:space="preserve" x:Key="ModsUIInvalidIncludeDirs">Hedge Mod Manager 已检测到一个或多个 Mod 包含无效目录。&#x0a;您是否希望 Hedge Mod Manager 自动修复？</system:String>
     <system:String xml:space="preserve" x:Key="ModsUINoMods">...此处空空如也&#x0a;试着去下载一些 Mod 吧</system:String>
 
     <!-- Codes UI Strings -->
     <system:String x:Key="CodesUIName"    >名称</system:String>
+    <system:String x:Key="CodesUICategory">分类</system:String>
+    <system:String x:Key="CodesUIExpand"  >展开</system:String>
+    <system:String x:Key="CodesUICollapse">折叠</system:String>
+    <system:String x:Key="CodesUINullCategory">未分类</system:String>
+    <system:String x:Key="SettingsUICodesUseTreeView">使用树视图展示代码列表</system:String>
     <system:String x:Key="CodesUIDownload">下载社区代码</system:String>
     <system:String x:Key="CodesUIUpdate"  >更新社区代码</system:String>
-    <system:String x:Key="CodesUISearch"  >搜索：</system:String>
-    <system:String xml:space="preserve" x:Key="CodesUIVersionIncompatible">安装的代码与代码加载器不相容。&#x0a;请更新代码和代码加载器。&#x0a;警告：这将删除所有自定义代码。</system:String>
+    <system:String x:Key="CodesUISearch"  >搜索: </system:String>
+    <system:String x:Key="CodesUIInfo"    >双击本代码以获取更多信息。</system:String>
+    <system:String x:Key="CodesUIInfoHint">光标悬浮在代码上以获取更多信息。</system:String>
+    <system:String x:Key="CodesUINoInfo"  >暂无任何信息。</system:String>
+    <system:String xml:space="preserve" x:Key="CodesUIVersionIncompatible">安装的代码与代码加载器不相容。&#x0a;请更新代码和代码加载器。&#x0a;警告: 这将删除所有自定义代码。</system:String>
     <system:String xml:space="preserve" x:Key="CodesUIFetching">正在下载代码…</system:String>
 
     <!-- Settings UI Strings -->
     <!--   Game & Mod Loader -->
-    <system:String x:Key="SettingsUIGMLHeader"      >游戏 及 Mod 加载器</system:String>
+    <system:String x:Key="SettingsUIGMLHeader"      >游戏及 Mod 加载器</system:String>
     <system:String x:Key="SettingsUIInstallLoader"  >安装 Mod 加载器</system:String>
     <system:String x:Key="SettingsUIUninstallLoader">删除 Mod 加载器</system:String>
     <system:String x:Key="SettingsUIOpenMods"       >打开 Mod 目录</system:String>
-    <system:String x:Key="SettingsUIOpenGameDir"    >打开 游戏目录</system:String>
+    <system:String x:Key="SettingsUIOpenGameDir"    >打开游戏目录</system:String>
     <system:String x:Key="SettingsUIEnableML"       >启用 Mod 程序</system:String>
-    <system:String x:Key="SettingsUIEnableDebug"    >启用 调试控制台</system:String>
-    <system:String x:Key="SettingsUIEnableSRedir"   >启用 重新导向存档</system:String>
-    <system:String x:Key="SettingsUIUseLauncher"    >启用 游戏启动器加载</system:String>
-    <system:String x:Key="SettingsUILabelLoaders"   >加载器：</system:String>
-    <system:String x:Key="SettingsUILabelGame"      >游戏：</system:String>
-    <system:String x:Key="SettingsUILabelProfile"   >设置档：</system:String>
-    <system:String x:Key="SettingsUILabelMDir"      >Mod 目录：</system:String>
+    <system:String x:Key="SettingsUIEnableDebug"    >启用调试控制台</system:String>
+    <system:String x:Key="SettingsUIEnableSRedir"   >启用重新导向存档</system:String>
+    <system:String x:Key="SettingsUIUseLauncher"    >启用游戏启动器加载</system:String>
+    <system:String x:Key="SettingsUILabelLoaders"   >加载器: </system:String>
+    <system:String x:Key="SettingsUILabelGame"      >游戏: </system:String>
+    <system:String x:Key="SettingsUILabelProfile"   >设置存档: </system:String>
+    <system:String x:Key="SettingsUILabelMDir"      >Mod 目录: </system:String>
     <!--   Hedge Mod Manager -->
     <system:String x:Key="SettingsUIHMMHeader"      >Hedge Mod Manager</system:String>
     <system:String x:Key="SettingsUICheckMLUpdate"  >查询 Mod 加载器是否有更新</system:String>
@@ -91,9 +99,9 @@
     <system:String x:Key="SettingsUIKeepHMMOpen"    >开始游戏后并保持程序打开</system:String>
     <system:String x:Key="SettingsUICheckHMMUpdate" >检查更新</system:String>
     <system:String x:Key="SettingsUIAboutHMM"       >关于 Hedge Mod Manager</system:String>
-    <system:String x:Key="SettingsUILanguage"       >语言：</system:String>
-    <system:String x:Key="SettingsUITheme"          >主题：</system:String>
-    <system:String x:Key="SettingsUIReleaseChannel" >更新渠道：</system:String>
+    <system:String x:Key="SettingsUILanguage"       >语言: </system:String>
+    <system:String x:Key="SettingsUITheme"          >主题: </system:String>
+    <system:String x:Key="SettingsUIReleaseChannel" >更新渠道: </system:String>
     <system:String x:Key="SettingsUIChangingChannelTitle" >变更更新渠道</system:String>
     <system:String x:Key="SettingsUIChangeChannelRel" xml:space="preserve">您即将切换到发布渠道。&#x0a;&#x0a;确定要继续吗？ Hedge Mod Manager 需要重新启动才能更改渠道。</system:String>
     <system:String x:Key="SettingsUIChangeChannelDev" xml:space="preserve">您即将切换到开发渠道。此渠道可能包含未经测试的功能和错误。&#x0a;&#x0a;您确定要继续吗？ Hedge Mod Manager 需要重新启动才能更改渠道。</system:String>
@@ -110,7 +118,7 @@
     <system:String x:Key="MainUIRuntimeMissingMsg" xml:space="preserve">{0} 需要 {1} 安装在 Mod 上 &#x0a;来正常运行, 你想要使用 HMM 来安装这个运行环境吗？ </system:String>
     <system:String x:Key="MainUISaveFileRedirectionDisabled" xml:space="preserve">使用一个或多个的 Mod 时需要启用「存档重新导向」才能正常工作。 需要启用此功能吗？＆＃x0a; (不清楚者请选择是)</system:String>
     <system:String x:Key="MainUIMissingDependsHeader" >无法解决 Mod 依赖</system:String>
-    <system:String x:Key="MainUIMissingDepends"       >以下 Mod 缺少依赖项：</system:String>
+    <system:String x:Key="MainUIMissingDepends"       >以下 Mod 缺少依赖项: </system:String>
     <system:String x:Key="MainUIMissingDependsResolve">从 GameBanana 去解决 Mod 问题</system:String>
     <system:String x:Key="MainUIResolvable" xml:space="preserve">通过单击 「从 GameBanana 去解决 Mod 问题」，可以从 GameBanana &#x0a; 自动修正一个或多个依赖项。</system:String>
 
@@ -120,8 +128,8 @@
     <!-- AboutWindow UI Strings -->
     <system:String x:Key="AboutWindowUITitle"      >关于 Hedge Mod Manager</system:String>
     <system:String x:Key="AboutWindowUILine1"      >设计 Hedge Mod Manager 程序的目的是帮助人们能够更方便地加载 Mod。</system:String>
-    <system:String x:Key="AboutWindowUILine2"      >需要合法拥有的游戏版本来支持。</system:String>
-    <system:String x:Key="AboutWindowUICredits"    >来源：</system:String>
+    <system:String x:Key="AboutWindowUILine2"      >请使用您合法持有的正版游戏</system:String>
+    <system:String x:Key="AboutWindowUICredits"    >参与人员</system:String>
     <system:String x:Key="AboutWindowUITranslators">翻译人员</system:String>
 
     <!-- ProfileWindow UI Strings -->
@@ -136,10 +144,10 @@
     <system:String x:Key="ProfileWindowUIExport"     >导出</system:String>
     <system:String x:Key="ProfileWindowUIImport"     >导入</system:String>
     <system:String x:Key="ProfileWindowUIDelete"     >删除配置文件</system:String>
-    <system:String x:Key="ProfileWindowUINameLabel"  >配置文件名称：</system:String>
+    <system:String x:Key="ProfileWindowUINameLabel"  >配置文件名称: </system:String>
     <system:String x:Key="ProfileWindowUIImportFail" >导入 Mod 配置文件失败</system:String>
-    <system:String x:Key="ProfileWindowUIImportMissingMods"   >未找到以下 Mod：</system:String>
-    <system:String x:Key="ProfileWindowUIImportMissingCodes"  >未找到以下代码：</system:String>
+    <system:String x:Key="ProfileWindowUIImportMissingMods"   >未找到以下 Mod: </system:String>
+    <system:String x:Key="ProfileWindowUIImportMissingCodes"  >未找到以下代码: </system:String>
 
     <!-- EditModWindow UI Strings -->
     <system:String x:Key="EditModWindowUIHeader">请填写有关您的 Mod 的一些详细信息</system:String>
@@ -229,12 +237,13 @@
     <system:String x:Key="GameSonicLostWorld">索尼克 失落世界</system:String>
     <system:String x:Key="GameSonicForces">索尼克 力量</system:String>
     <system:String x:Key="GamePuyoPuyoTetris2">魔法气泡 特趣思 俄罗斯方块 2</system:String>
-    <system:String x:Key="GameTokyo2020">2020东京奥运</system:String>
+    <system:String x:Key="GameTokyo2020">2020 东京奥运</system:String>
     <system:String x:Key="GameSonicColorsUltimate">索尼克 缤纷色彩 究极版</system:String>
     <system:String x:Key="GameSonicOrigins">索尼克 起源</system:String>
     <system:String x:Key="GameSonicFrontiers">索尼克 未知边境</system:String>
     <system:String x:Key="GameNoGame">未能检测游戏</system:String>
     <system:String x:Key="LauncherSteam">Steam</system:String>
     <system:String x:Key="LauncherEpic">Epic Games</system:String>
+    <system:String x:Key="LauncherHeroic">Heroic</system:String>
 
 </ResourceDictionary>
