--- a/HedgeModManager/Languages/ru-RU.xaml
+++ b/HedgeModManager/Languages/ru-RU.xaml
@@ -69,11 +69,19 @@
     <system:String x:Key="CodesUIInfo"    >Нажмите два раза по этому коду для большей информации.</system:String>
     <system:String x:Key="CodesUIInfoHint">Наведите курсор на код для большей информации.</system:String>
     <system:String x:Key="CodesUINoInfo"  >Нет информации.</system:String>
+	<system:String x:Key="CodesUICopyCode">Скопировать код в буфер обмена</system:String>
     <system:String x:Key="CodesUIExpand"  >Раскрыть всё</system:String>
     <system:String x:Key="CodesUICollapse">Закрыть всё</system:String>
     <system:String x:Key="CodesUINullCategory">Без категории</system:String>
     <system:String xml:space="preserve" x:Key="CodesUIVersionIncompatible">Установленные коды несовместимы с загрузчиком кодов.&#x0a;Пожалуйста, обновите коды, а также загрузчик кодов.&#x0a;ВНИМАНИЕ: Это приведет к удалению всех пользовательских кодов.</system:String>
     <system:String xml:space="preserve" x:Key="CodesUIFetching">Получение кодов...</system:String>
+	
+	<!-- Diff UI Strings -->
+    <system:String x:Key="DiffUITitle"   >Список изменений</system:String>
+    <system:String x:Key="DiffUIAdded"   >Добавлено: {0}</system:String>
+    <system:String x:Key="DiffUIModified">Изменено: {0}</system:String>
+    <system:String x:Key="DiffUIRemoved" >Удалено: {0}</system:String>
+    <system:String x:Key="DiffUIRenamed" >Переименовано: {0}</system:String>
 
     <!-- Settings UI Strings -->
     <!--   Game & Mod Loader -->
@@ -180,7 +188,7 @@
     <system:String x:Key="StatusUINoCodeUpdatesFound"     >Не найдено обновлений к кодам</system:String>
 
     <!-- Dialog UI Strings -->
-    <system:String xml:space="preserve" x:Key="DialogUINoGameDirAccess">Hedge Mod Manager не может получить доступ к папке игры.&#x0a;Убедитесь, что группа пользователей имеет доступ к записи в этой папке и всем файлам и папкам внутри неё&#x0a;&#x0a;{0}</system:String> <!-- Надо переписать-->
+    <system:String xml:space="preserve" x:Key="DialogUINoGameDirAccess">Hedge Mod Manager не может получить доступ к папке игры.&#x0a;Убедитесь, что группа пользователей имеет доступ к записи в этой папке и всем файлам и папкам внутри неё&#x0a;&#x0a;{0}</system:String>
     <system:String xml:space="preserve" x:Key="DialogUIDeleteMod">Вы действительно хотите удалить "{0}"?&#x0a;Это действие нельзя будет отменить!</system:String>
     <system:String xml:space="preserve" x:Key="DialogUIModNewest">{0} уже обновлен до последней версии.</system:String>
     <system:String xml:space="preserve" x:Key="DialogUIModUpdate">Доступна новая версия {0}! ({1})</system:String>
