--- a/HedgeModManager/Languages/uk-UA.xaml
+++ b/HedgeModManager/Languages/uk-UA.xaml
@@ -122,69 +122,69 @@
     <system:String x:Key="MainUIMissingLoaderHeader"  >Завантажувач модів ще не встановлено!</system:String>
     <system:String xml:space="preserve" x:Key="MainUIMissingLoaderDesc">Для того, щоб {0} почав завантажувати моди, потрібно встановити завантажувач модів.&#x0a;Бажаєте встановити його зараз?</system:String>
     <system:String x:Key="MainUISelectModsDBTitle"    >Виберіть, звідки завантажити моди...</system:String>
-    <system:String x:Key="MainUIRuntimeMissingTitle"  >Виявлено відсутність Runtime!</system:String>
-    <system:String x:Key="MainUIRuntimeMissingMsg" xml:space="preserve">{0} вимагає встановлення {1} для належного функціонування модів, чи хочете ви, щоб HMM встановив серевище виконання?</system:String>
-    <system:String x:Key="MainUISaveFileRedirectionDisabled" xml:space="preserve">One or more enabled mods require save file redirection to work properly. Enable this feature?&#x0a;Click no only if you know what you are doing.</system:String>
-    <system:String x:Key="MainUIMissingDependsHeader" >Failed to resolve mod dependencies</system:String>
-    <system:String x:Key="MainUIMissingDepends"       >The following mods have missing dependencies:</system:String>
-    <system:String x:Key="MainUIMissingDependsResolve">Resolve GB Mods</system:String>
-    <system:String x:Key="MainUIResolvable" xml:space="preserve">One or more dependencies can be automatically resolved&#x0a;from GameBanana by clicking "Resolve GB Mods".</system:String>
+    <system:String x:Key="MainUIRuntimeMissingTitle"  >Виявлено відсутність потрібних файлів!</system:String>
+    <system:String x:Key="MainUIRuntimeMissingMsg" xml:space="preserve">{0} вимагає встановлення {1} для належного функціонування модів, чи хочете ви, щоб HMM встановив середовище виконання?</system:String>
+    <system:String x:Key="MainUISaveFileRedirectionDisabled" xml:space="preserve">Один або декілька увімкнених модів потребують перенаправлення файлів збереження для належної роботи. Увімкнути цю функцію? &#x0a;Натисніть ні, тільки якщо ви знаєте, що робите.</system:String>
+    <system:String x:Key="MainUIMissingDependsHeader" >Не вдалося вирішити залежності мода</system:String>
+    <system:String x:Key="MainUIMissingDepends"       >Наступні моди мають відсутні залежності:</system:String>
+    <system:String x:Key="MainUIMissingDependsResolve">Вирішити проблеми з модами GB</system:String>
+    <system:String x:Key="MainUIResolvable" xml:space="preserve">Одну або декілька залежностей можна автоматично усунути&#x0a;з GameBanana, натиснувши кнопку "Вирішити проблеми з модами GB".</system:String>
 
     <!-- OptionsWindow UI Strings -->
-    <system:String x:Key="OptionsWindowUIError"      >Please select an option!</system:String>
+    <system:String x:Key="OptionsWindowUIError"      >Будь ласка, оберіть опцію!</system:String>
 
     <!-- AboutWindow UI Strings -->
-    <system:String x:Key="AboutWindowUITitle"      >About Hedge Mod Manager</system:String>
-    <system:String x:Key="AboutWindowUILine1"      >A program designed to help people easily load Hedgehog Engine mods.</system:String>
-    <system:String x:Key="AboutWindowUILine2"      >Requires a legally owned version of one of the supported games.</system:String>
-    <system:String x:Key="AboutWindowUICredits"    >Credits</system:String>
-    <system:String x:Key="AboutWindowUITranslators">Translators</system:String>
+    <system:String x:Key="AboutWindowUITitle"      >Про Hedge Mod Manager</system:String>
+    <system:String x:Key="AboutWindowUILine1"      >Програма, розроблена, щоб допомогти людям легко завантажувати моди для Hedgehog Engine.</system:String>
+    <system:String x:Key="AboutWindowUILine2"      >Потрібні ліцензійні версії підтримуваних ігор.</system:String>
+    <system:String x:Key="AboutWindowUICredits"    >Автори</system:String>
+    <system:String x:Key="AboutWindowUITranslators">Перекладачи</system:String>
 
     <!-- ProfileWindow UI Strings -->
-    <system:String x:Key="ProfileWindowUITitle"      >Manage Profiles</system:String>
-    <system:String x:Key="ProfileWindowUIRenameTitle">Rename Profile</system:String>
-    <system:String x:Key="ProfileWindowUICreateTitle">Create Profile</system:String>
-    <system:String x:Key="ProfileWindowUIName"       >Name</system:String>
-    <system:String x:Key="ProfileWindowUIFile"       >File Name</system:String>
-    <system:String x:Key="ProfileWindowUICreate"     >Create</system:String>
-    <system:String x:Key="ProfileWindowUIRename"     >Rename</system:String>
-    <system:String x:Key="ProfileWindowUIClone"      >Clone</system:String>
-    <system:String x:Key="ProfileWindowUIExport"     >Export</system:String>
-    <system:String x:Key="ProfileWindowUIImport"     >Import</system:String>
-    <system:String x:Key="ProfileWindowUIDelete"     >Delete Profile</system:String>
-    <system:String x:Key="ProfileWindowUINameLabel"  >Name:</system:String>
-    <system:String x:Key="ProfileWindowUIImportFail" >Failed to import mod profile</system:String>
-    <system:String x:Key="ProfileWindowUIImportMissingMods"   >The following mods were not found:</system:String>
-    <system:String x:Key="ProfileWindowUIImportMissingCodes"  >The following codes were not found:</system:String>
+    <system:String x:Key="ProfileWindowUITitle"      >Керування Профілями</system:String>
+    <system:String x:Key="ProfileWindowUIRenameTitle">Перейменувати Профіль</system:String>
+    <system:String x:Key="ProfileWindowUICreateTitle">Зробити Профіль</system:String>
+    <system:String x:Key="ProfileWindowUIName"       >Назва</system:String>
+    <system:String x:Key="ProfileWindowUIFile"       >Назва Файла</system:String>
+    <system:String x:Key="ProfileWindowUICreate"     >Зробити</system:String>
+    <system:String x:Key="ProfileWindowUIRename"     >Перейменувати</system:String>
+    <system:String x:Key="ProfileWindowUIClone"      >Клонувати</system:String>
+    <system:String x:Key="ProfileWindowUIExport"     >Експорт</system:String>
+    <system:String x:Key="ProfileWindowUIImport"     >Імпорт</system:String>
+    <system:String x:Key="ProfileWindowUIDelete"     >Видалити Профіль</system:String>
+    <system:String x:Key="ProfileWindowUINameLabel"  >Назва:</system:String>
+    <system:String x:Key="ProfileWindowUIImportFail" >Не вдалося імпортувати профіль мода</system:String>
+    <system:String x:Key="ProfileWindowUIImportMissingMods"   >Наступні модифікації не було знайдено:</system:String>
+    <system:String x:Key="ProfileWindowUIImportMissingCodes"  >Наступні коди не було знайдено:</system:String>
 
     <!-- EditModWindow UI Strings -->
-    <system:String x:Key="EditModWindowUIHeader">Please fill out some details about your mod.</system:String>
+    <system:String x:Key="EditModWindowUIHeader">Будь ласка, заповніть деякі дані про ваш мод.</system:String>
 
     <!-- PropertyEditor UI Strings -->
-    <system:String x:Key="PropertyEditorUIName" >Name</system:String>
-    <system:String x:Key="PropertyEditorUIValue">Value</system:String>
+    <system:String x:Key="PropertyEditorUIName" >Назва</system:String>
+    <system:String x:Key="PropertyEditorUIValue">Значення</system:String>
 
     <!-- Status UI Strings -->
-    <system:String x:Key="StatusUILoadedMods"             >Loaded {0} mods</system:String>
-    <system:String x:Key="StatusUICheckingModUpdates"     >Checking for {0} updates</system:String>
-    <system:String x:Key="StatusUIFailedToUpdate"         >Failed to update {0}! {1}</system:String>
-    <system:String x:Key="StatusUIModUpdateCheckFinish"   >Finished checking for mod updates: {0} completed, {1} failed</system:String>
-    <system:String x:Key="StatusUIStartingGame"           >Starting {0}</system:String>
-    <system:String x:Key="StatusUICheckingForUpdates"     >Checking for updates</system:String>
-    <system:String x:Key="StatusUINoUpdatesFound"         >No updates found</system:String>
-    <system:String x:Key="StatusUIFailedToCheckUpdates"   >Failed to check for updates</system:String>
-    <system:String x:Key="StatusUICheckingForLoaderUpdate">Checking for {0} updates</system:String>
-    <system:String x:Key="StatusUILoaderUpToDate"         >{0} is up to date</system:String>
-    <system:String x:Key="StatusUIFailedLoaderUpdateCheck">Failed to check for {0} updates</system:String>
-    <system:String x:Key="StatusUIInstalledLoader"        >Installed {0}</system:String>
-    <system:String x:Key="StatusUIDeletedMod"             >Deleted {0}</system:String>
-    <system:String x:Key="StatusUIModsDBSaved"            >Saved mods database</system:String>
-    <system:String x:Key="StatusUIModsDBLocationChanged"  >Updated database location</system:String>
-    <system:String x:Key="StatusUIGameChange"             >Changed game to {0}</system:String>
-    <system:String x:Key="StatusUIDownloadingCodes"       >Downloading codes for {0}</system:String>
-    <system:String x:Key="StatusUIDownloadFinished"       >Download finished</system:String>
-    <system:String x:Key="StatusUIDownloadFailed"         >Download failed</system:String>
-    <system:String x:Key="StatusUICodeUpdatesAvailable"   >Code updates available!</system:String>
+    <system:String x:Key="StatusUILoadedMods"             >Завантажено {0} модів</system:String>
+    <system:String x:Key="StatusUICheckingModUpdates"     >Перевірка наявності оновлень для {0}</system:String>
+    <system:String x:Key="StatusUIFailedToUpdate"         >Не вдалося оновити {0}! {1}</system:String>
+    <system:String x:Key="StatusUIModUpdateCheckFinish"   >Завершено перевірку на наявність оновлень мода: {0} виконано, {1} не виконано</system:String>
+    <system:String x:Key="StatusUIStartingGame"           >Запуск {0}</system:String>
+    <system:String x:Key="StatusUICheckingForUpdates"     >Перевірка оновлень</system:String>
+    <system:String x:Key="StatusUINoUpdatesFound"         >Оновлень не знайдено</system:String>
+    <system:String x:Key="StatusUIFailedToCheckUpdates"   >Не вдалося перевірити наявність оновлень</system:String>
+    <system:String x:Key="StatusUICheckingForLoaderUpdate">Перевірка наявності {0} оновлень</system:String>
+    <system:String x:Key="StatusUILoaderUpToDate"         >{0} оновлений</system:String>
+    <system:String x:Key="StatusUIFailedLoaderUpdateCheck">Не вдалося перевірити наявність {0} оновлень</system:String>
+    <system:String x:Key="StatusUIInstalledLoader"        >Встановлено {0}</system:String>
+    <system:String x:Key="StatusUIDeletedMod"             >Видалено {0}</system:String>
+    <system:String x:Key="StatusUIModsDBSaved"            >База даних збережена</system:String>
+    <system:String x:Key="StatusUIModsDBLocationChanged"  >Оновлення розташування бази даних</system:String>
+    <system:String x:Key="StatusUIGameChange"             >Змінено гру на {0}</system:String>
+    <system:String x:Key="StatusUIDownloadingCodes"       >Завантаження кодів для {0}</system:String>
+    <system:String x:Key="StatusUIDownloadFinished"       >Завантаження завершено</system:String>
+    <system:String x:Key="StatusUIDownloadFailed"         >Помилка завантаження</system:String>
+    <system:String x:Key="StatusUICodeUpdatesAvailable"   >Доступні оновлення   !</system:String>
     <system:String x:Key="StatusUINoCodeUpdatesFound"     >No code updates found</system:String>
 
     <!-- Dialog UI Strings -->
